More hibernate related changes and other refactorings